Safari button alignment fix

--- a/scss/partials/_button-v2-0.scss
+++ b/scss/partials/_button-v2-0.scss
@@ -164,8 +164,13 @@
                 }
             }
 
+            span, i {
+                margin-left: auto;
+            }
+
             span ~ i, i ~ span {
                 margin-left: $extra-small-spacing !important;
+                margin-right: auto;
             }
 
             &--only {
